# frostwire

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  COIL_MIGRATION.md  DESIGN_RELAY_REGISTRY.md  HANDOFF_V2_SEARCH_MIGRATION.md  ICEBRIDGE.md  ICEBRIDGE_ARCHITECTURE_REVIEW.md  IP_FILTERING_IMPLEMENTATION.md  MEMORY_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  SEARCHENGINE_CONSOLIDATION.md  SPEC_KARMA_CHAIN.md  UI_SCREENSHOTS.md  WAYLAND_ARM64_FIX.md  WEAKREFERENCE_AUDIT_REPORT.md  blog-agent-personas-from-git-history.md  build.gradle  dependabot.yml  git_telluride_sync.sh  gradle-dependencies.json  update-flatpak-deps.sh  update-jlibtorrent.sh
.github/: FUNDING.yml
android/: -proc:none  .classpath  .project  AndroidManifest.xml  COPYING  FrostWire-3.1.0-build-771-release-post.md  README.md  WORKMANAGER_FIX.md  build.gradle  changelog.txt  deployRelease  frostwire_launcher.py  google-services.json  gradle.properties  local.properties  local.properties.example  multidex-config.txt  proguard-rules.pro  proguard.cfg  settings.gradle  validate_workmanager_fix.sh
common/: .project  DATE_PARSER_OPTIMIZATION.md  LEVENSHTEIN_OPTIMIZATION.md  PERFORMANCE_IMPROVEMENTS.md  README.md  build.gradle  dependencies.gradle  settings.gradle
desktop/: .classpath  .env.example  .project  Dockerfile.desktop  FROSTWIRE_SKILL.md  FrostWire-7.0.4-release-post.md  ICEBRIDGE_REVISION_PLAN.md  MEMORY.md  README.md  REFACTORING_SUMMARY.md  RELEASE_7.0.4.md  SNAP.md  (+10 more)
desktop/lib/native-src/linux/: CMakeLists.txt  SystemUtilities.cpp  SystemUtilities.hpp
(+4028 files in other folders)
